# valentina

./: .env.example  Makefile  README.md  dependencias.md  pyproject.toml
docs/: VALENTINA_PLAN.md
src/valentina/: __init__.py  __main__.py  data.py  generation.py  modal.py  training.py
tests/: test_cli_generate.py
