[tool.poetry]
name = "valentina"
version = "0.1.0"
description = "Foundation package for the Valentina Moreau image generation platform."
authors = ["Valentina Team <dev@valentina.ai>"]
readme = "README.md"
packages = [{include = "valentina", from = "src"}]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.10"
torch = "2.1.0"
torchvision = "0.16.0"
diffusers = "^0.25.0"
accelerate = "^0.24.1"
xformers = "^0.0.22.post7"
transformers = "^4.35.2"
safetensors = "^0.4.1"
peft = "^0.7.1"
controlnet-aux = "^0.0.8"
datasets = "^2.14.6"
opencv-python = "^4.8.1.78"
albumentations = "^1.3.1"
open-clip-torch = "^2.24.0"
facenet-pytorch = "^2.5.3"
wandb = "^0.15.12"
mlflow = "^2.8.1"
boto3 = "^1.28.57"
google-cloud-storage = "^2.12.0"
pillow = "^10.0.1"
numpy = "^1.26.1"
scipy = "^1.11.3"
tqdm = "^4.66.1"
rich = "^13.6.0"
python-dotenv = "^1.0.0"

[tool.poetry.group.dev.dependencies]
black = "^23.10"
ruff = "^0.1.4"
pytest = "^7.4.3"
pytest-cov = "^4.1.0"
pre-commit = "^3.5.0"

[tool.poetry.scripts]
valentina = "valentina.__main__:cli"

[tool.ruff]
line-length = 100
select = ["E", "F", "I", "B", "UP", "N", "ANN", "C4"]
ignore = ["ANN101", "ANN102", "ANN401"]

[tool.black]
line-length = 100

[build-system]
requires = ["poetry-core>=1.7.0"]
build-backend = "poetry.core.masonry.api"
